# VideoFilterApp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: VideoFilterApp.h
src/: VideoProcessor.cpp  VideoProcessor.h  main.cpp
src/filters/: ColorEnhanceFilter.cpp  ColorEnhanceFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h
src/ui/: UserInterface.cpp  UserInterface.h
src/utils/: FileDialog.cpp  FileDialog.h  PerformanceMonitor.cpp  PerformanceMonitor.h
tests/: basic_tests.cpp
